--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body,html {
 }
 #root{
   
-   background: linear-gradient(to bottom right, #ffe592 0%, #fda085 100%) no-repeat; 
+   background: linear-gradient(to bottom right, #ffe592 0%, #fff 100%) no-repeat; 
   
 }
 html{
